# aisee

backend/: .env.example  .gitignore  README.md  alembic.ini  db_test.py  pyproject.toml  repomix-output.txt
backend/scripts/: start.bat  start.sh
backend/src/: auth.py  main.py  models.py  schemas.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: a87a0330c3f9_initial_migration.py
backend/src/api/: auth.py  main.py  user.py  video.py
backend/src/assets/results/: aeef6f39-38e2-4d2b-91ba-a1262aa0178d_result.json
backend/src/core/: config.py  db.py
backend/src/logic/: customer_counter.py  customer_counter2.py  people_counter.py
backend/src/services/: user.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ModalNotAuth.jsx  Navbar.jsx
frontend/src/pages/: Analytics.jsx  Home.jsx  Login.jsx  Profile.jsx  Upload.jsx  calendar.css
